--- a/embyToLocalPlayer/embyToLocalPlayer_config.ini
+++ b/embyToLocalPlayer/embyToLocalPlayer_config.ini
@@ -1,4 +1,4 @@
-##################################################################
+﻿##################################################################
 ### v v # # # # # # # # # 基础配置 # # # # # # # # # # # # v v ###
 
 [exe]
@@ -65,10 +65,42 @@ enable_host = localhost, 127.0.0.1, 192.168. , 192-168-, example.com:8096, . ,
 # 尝试下一集保持播放相同版本，失败会禁用播放列表，可能影响 S0 插入混播。
 # 写下不同版本间，文件名之间的差异字段，用|隔开。（实际是正则，不分大小写）
 # 示例：720|1080|2160|4k|remux|hevc|265|264|sdr|hdr|dv|vision|baha|cr|global|house|vcb|mkv|mp4|简.|.语|内.|..字幕|....组|..@..
-version_filter =
+version_filter = 
+    #### 正则格式，忽略头尾的`|`，忽略所有空白符号
+    #### 请根据具体需求，通过打开/关闭以下行的注释以调节版本过滤的行为
+    #### 注意靠前的名称/pattern优先级高
+
+    #### 1. 特殊组名，基本不会误判/误杀，建议保持开启
+    |喵萌奶茶屋|熔岩动画|Xrip|AKito秋人|智械尚未危机制作|雪飘工作室|jibaketa-粤语版|亿次研同好会|❀拨雪寻春❀|VARYG|B站小鱼儿呼唤爱
+    |hchcsen|Arid|Knf|sxales|异域-11番小队|DreamHD|AliPan|Kagura|hydes|niizk|Xeon晚生|氢气烤肉架|LoliHouse|VCB-Studio|7³ACG
+    |LittleBakas!|FSD粉羽社|一只出格君|OPFans枫雪动漫|GM-Team|澄空学园|SilverBullet|APTX4869|X酱|NEO·QSW
+
+    #### 2. 匹配具体组名，不灵活但不易误杀，建议保持开启
+    |豌豆字幕组|北宇治字幕组|云光字幕组|织梦字幕组|千夏字幕组|风之圣殿字幕组|风车字幕组|银色子弹字幕组|枫叶字幕组|诸神字幕组|SW字幕组
+    |DAY字幕组|轻之国度字幕组|星空字幕组|冷番补完字幕组|康复中心字幕组|極彩字幕组|桜都字幕组|幻之字幕组|魔穗字幕组|白恋字幕组|动漫国字幕组
+    |FSD字幕组|酷漫字幕组|康复重症监护室字幕组|擦枪字幕组|幻樱字幕组|咪梦字幕组|漫游字幕组
+    |爱恋字幕社|漫猫字幕社|极影字幕社|悠哈璃羽字幕社
+    |六道是我大鸽汉化组|MCE汉化组|猫恋汉化组
+    |猎户发布组|DBD制作组|DBD|Amor压制组|永恒译制
+    |MingYSub|霜庭云花Sub|离谱Sub|新Sub|SweetSub|霜庭云花Sub
+    |AI-Raws|Kawaiika-Raws|Zero-Raws|Deadmau-RAWS|IrizaRaws|Beatrice-Raws
+
+    #### 3. 匹配分辨率、音视频格式、流媒体源、语言、通用组名，较灵活
+    #### 某些流媒体源的简称，由于过短容易在标题中出现导致误杀，视情况开启/关闭
+    |720p|1080p|2160p|4k
+    |remux|hevc|h.265|h.264|h265|h264|flac|aac|sdr|hdr|dv|vision|dvrip|bdrip|mkv|mp4
+    |Baha|Crunchyroll|B-Global|KKTV|MyVideo|AMZN|friDay|Disney\+|LINETV|Netflix|playWEB|Viu|Amazon|AppleTV\+|HMAX|BiliBili|Abema
+    |YouTube|CatchPlay|iTunes|ADWeb|NTb|FLUX
+    # |CR|NF|MAX
+    |简体|繁体|繁體|简繁|中英|中上英下|简英|简体&英文|繁英|繁体&英文|繁體&英文|中日|简日|繁日|双语|内封|内嵌
+    |..字幕组|..字幕社|..汉化组|..发布组|..制作组|..压制组|..译制|...Raws|..@..
+
+    #### 4. pilipili统一命名格式(如"123456 Title BDRip.1080p.H.265 10-bit.FLAC.简繁外挂.XX字幕组.mkv")
+    #### 最为灵活，但目前库里还存在少量命名规范与现在不同的文件，可能会导致误杀
+    # |(\S+\.\S+)
 
 # 条目数量限制，需要大于0，-1 为采用预设值。
-item_limit = -1
+item_limit = 50
 
 # pot 和 vlc(Linux/macOS) 播放含外挂字幕的剧集网络流时。下一集无法加载字幕，故禁用播放列表。
 # 这种情况下，是否需要按下方策略简易连播。
