--- a/profiles.conf
+++ b/profiles.conf
@@ -2,11 +2,80 @@
 
 #部分配置参考 https://github.com/dyphire/mpv-config/blob/master/mpv.conf
 #########   https://github.com/hooke007/MPV_lazy/
+ 
+ ##############
+ # 手动配置组 #
+ ##############
+
+
+[NNEDI3]
+ profile-desc=适用于大多数场景
+ glsl-shaders="~~/shaders/nnedi3/nnedi3-nns32-win8x4.glsl;~~/shaders/igv/KrigBilateral.glsl;~~/shaders/igv/SSimSuperRes.glsl;~~/shaders/igv/SSimDownscaler.glsl"
+
+[NNEDI3+]
+ profile-desc=适用于低解析场景
+ glsl-shaders="~~/shaders/nnedi3/nnedi3-nns64-win8x4.glsl;~~/shaders/igv/KrigBilateral.glsl;~~/shaders/igv/SSimSuperRes.glsl;~~/shaders/igv/SSimDownscaler.glsl"
+
+[AMD-FSR_EASU]
+ profile-desc=适用于大多数场景
+ glsl-shaders="~~/shaders/igv/KrigBilateral.glsl;~~/shaders/AMD-FSR/AMD-FSR-EASU_rgb.glsl;~~/shaders/igv/SSimDownscaler.glsl"
+
+[Normal]
+ profile-desc=适用于 HD 场景
+ glsl-shaders="~~/shaders/igv/FSRCNNX_x2_8-0-4-1.glsl;~~/shaders/igv/KrigBilateral.glsl;~~/shaders/igv/SSimSuperRes.glsl;~~/shaders/igv/SSimDownscaler.glsl"
+
+[Normal+]
+ profile-desc=适用于低解析场景
+ glsl-shaders="~~/shaders/igv/FSRCNNX_x2_16-0-4-1_enhance.glsl;~~/shaders/igv/KrigBilateral.glsl;~~/shaders/igv/SSimSuperRes.glsl;~~/shaders/igv/SSimDownscaler.glsl"
+
+[Anime]
+ profile-desc=适用于 HD 动画
+ glsl-shaders="~~/shaders/igv/FSRCNNX_x2_8-0-4-1_LineArt.glsl;~~/shaders/igv/KrigBilateral.glsl;~~/shaders/igv/SSimSuperRes.glsl;~~/shaders/igv/SSimDownscaler.glsl"
+
+[Anime+]
+ profile-desc=适用于低解析动画
+ glsl-shaders="~~/shaders/igv/FSRCNNX_x2_16-0-4-1_anime_enhance.glsl;~~/shaders/igv/KrigBilateral.glsl;~~/shaders/igv/SSimSuperRes.glsl;~~/shaders/igv/SSimDownscaler.glsl"
+
+[ravu]
+ profile-desc=适用于大多数动画
+ glsl-shaders="~~/shaders/ravu/ravu-r3.glsl;~~/shaders/igv/KrigBilateral.glsl;~~/shaders/igv/SSimDownscaler.glsl"
+
+[ravu-3x]
+ profile-desc=适用于低解析动画
+ glsl-shaders="~~/shaders/ravu/ravu-3x-r3.glsl;~~/shaders/igv/KrigBilateral.glsl;~~/shaders/igv/SSimSuperRes.glsl;~~/shaders/igv/SSimDownscaler.glsl"
+
+[ravu-zoom]
+ profile-desc=适用于大多数场景
+ glsl-shaders="~~/shaders/ravu/ravu-zoom-ar-r3.glsl;~~/shaders/igv/KrigBilateral.glsl;~~/shaders/igv/SSimDownscaler.glsl"
+
+[ravu-lite]
+ profile-desc=适用于大多数场景
+ glsl-shaders="~~/shaders/ravu/ravu-lite-ar-r3.glsl;~~/shaders/igv/KrigBilateral.glsl;~~/shaders/igv/SSimSuperRes.glsl;~~/shaders/igv/SSimDownscaler.glsl"
+
+[ACNet]
+ profile-desc=适用于低解析动画
+ glsl-shaders="~~/shaders/ACNet/ACNet.glsl;~~/shaders/ACNet/ACNet.glsl;~~/shaders/igv/KrigBilateral.glsl;~~/shaders/igv/SSimSuperRes.glsl;~~/shaders/igv/SSimDownscaler.glsl"
+
+[ACNet+]
+ profile-desc=适用于低解析动画-强化降噪
+ glsl-shaders="~~/shaders/ACNet/ACNet_HDN_L1.glsl;~~/shaders/ACNet/ACNet.glsl;~~/shaders/igv/KrigBilateral.glsl;~~/shaders/igv/SSimSuperRes.glsl;~~/shaders/igv/SSimDownscaler.glsl"
+
+[Anime4K]
+ profile-desc=Anime4K
+ glsl-shaders="~~/shaders/igv/KrigBilateral.glsl;~~/shaders/Anime4K/Anime4K_Restore_CNN_Soft_M.glsl;~~/shaders/Anime4K/Anime4K_Clamp_Highlights.glsl"
+
+[Anime4K+]
+ profile-desc=Anime4K+
+ glsl-shaders="~~/shaders/igv/KrigBilateral.glsl;~~/shaders/Anime4K/Anime4K_Restore_CNN_Soft_VL.glsl;~~/shaders/Anime4K/Anime4K_Clamp_Highlights.glsl"
+
+[SSIM]
+ profile-desc=适用于4k低性能
+ glsl-shaders="~~/shaders/other/FastBilateral.glsl;~~/shaders/igv/SSimSuperRes.glsl;~~/shaders/igv/SSimDownscaler.glsl"
 
 ## 将 # 符号添加至 profile-cond 前即为关闭此条件配置
  
  ##############
- # 配置预设组 #
+ # 条件配置组 #
  ##############
 
 [SDR-Gamut]
@@ -62,12 +131,14 @@ video-sync = display-tempo
 
 
 [8k-fix]
- profile-desc = 8k 下使用 d3d11va 硬解来解决掉帧问题，该方案仅限 --gpu-api=d3d11 下可用
+ profile-desc = 8k 下使用特定硬解格式来解决掉帧问题，该方案仅限 --gpu-api=d3d11 下可用
  profile-cond = p["video-params/w"] > 7000 or p["video-params/h"] > 3000
  profile-restore = copy
- hwdec = auto-safe
+ hwdec = d3d12va-copy,auto-safe
  video-sync = audio
-
+ deband=no
+ vf=""
+ 
 [audio]
  profile-desc=音乐
  profile-cond=aid and (not vid or p["current-tracks/video/albumart"])
@@ -78,37 +149,18 @@ video-sync = display-tempo
  dscale = bilinear
  dither = no
 
-##⇘⇘[H2S-STM]为备选的HDR转SDR方案，若你的显卡不支持 --hdr-compute-peak 应启用这个方案且禁用 [H2S-DTM]
-##其它可选的改良方案 https://github.com/hooke007/MPV_lazy/discussions/25
 
-[H2S-STM]
- profile-desc           = HDR转SDR（静态色调映射）
-#profile-cond           = p["video-params/sig-peak"]>1
- profile-restore        = copy
-#blend-subtitles        = video      # 问题状态（静态映射不受影响） https://github.com/mpv-player/mpv/issues/6368
- target-peak            = 100        # <10-10000> 值越低，画面整体越亮。默认auto即203（不要用作通用参数，因为会影响sdr片源的正常输出亮度）
- hdr-compute-peak       = no         # 当yes时提供了基于场景的动态色调映射默认auto（完整支持该特性需要显卡opengl版本≥4.3）
- tone-mapping           = hable      # <auto默认|clip|mobius|reinhard|hable|bt.2390|gamma|linear> 色调映射算法
-#tone-mapping-param     = default    # 上项的小参。default根据算法的使用不同初始值，对部分算法无效
-                                     # clip=1.0; mobius=0.3; reinhard=0.5; gamma=1.8; linear=1.0
- tone-mapping-max-boost = 1.0        # <1.0-10.0> 过曝指数，默认1.0
- gamut-mapping-mode     = desaturate # <auto默认|clip|warn|desaturate> 完成色调映射后的色域裁剪方式
-
-
-[H2S-DTM]
- profile-desc             = HDR转SDR（动态色调映射-基础版）
- profile-cond             = p["video-params/sig-peak"]>1
- profile-restore          = copy
- blend-subtitles          = no
-#target-peak              = auto
- hdr-compute-peak         = yes
- hdr-peak-decay-rate      = 150        # [须 --hdr-compute-peak=yes ] <0.0-1000.0> 亮度峰值检测算法的衰减率，默认100.0
- hdr-scene-threshold-low  = 4          # [须 --hdr-compute-peak=yes ] <0.0-100.0> 场景变化亮度的下限阈值，默认1.0
- hdr-scene-threshold-high = 16         # [须 --hdr-compute-peak=yes ] <0.0-100.0> 场景变化亮度的上限阈值，默认3.0
- tone-mapping             = bt.2390
-#tone-mapping-param       = default
- tone-mapping-max-boost   = 1.5
- gamut-mapping-mode       = clip
+[HDR]
+ profile-desc=HDR 配置
+ profile-cond=p["video-out-params/max-luma"] > 203
+ profile-restore=copy
+ #icc-profile=""
+ #icc-profile-auto=no
+ #target-trc=auto
+ #target-peak=100
+ blend-subtitles=no
+ deband=no
+ vf=""
 
 
 [BDMV]
@@ -118,15 +170,6 @@ video-sync = display-tempo
  hr-seek = always
  hwdec = no
 
-
-[HDR_DolbyVision]
- profile-desc = hdr杜比视界
- profile-cond = filename:match("%.DoVi")
- profile-restore = copy
- vo = gpu-next
- hdr-compute-peak = no
- tone-mapping = st2094-40
- 
 [minimized]
  profile-desc=播放视频时最小化自动暂停
  profile-cond=window_minimized and vid and not p["current-tracks/video/albumart"]
