--- a/input.conf
+++ b/input.conf
@@ -63,15 +63,15 @@ BS               no-osd set      speed  1.0; script-message-to uosc flash-speed 
 
 ##⇘⇘uosc一级菜单：#menu: 导航
 O                no-osd cycle-values osd-level 3 1                                                                      #menu: 导航 > 开/关 显示OSD时间轴
+<                playlist-prev                                                                                          #menu: 导航 > 上个文件
+>                playlist-next                                                                                          #menu: 导航 > 下个文件
+#PGDWN            add chapter -1                                                                                         #menu: 导航 > 上一章节
+#PGUP             add chapter  1                                                                                         #menu: 导航 > 下一章节
 ALT+c            script-message-to chapter_make_read create_chapter                                                     #menu: 导航 > 章节制作 > 标记章节时间
 ALT+e            script-message-to chapter_make_read edit_chapter                                                       #menu: 导航 > 章节制作 > 编辑章节标题
 ALT+r            script-message-to chapter_make_read remove_chapter                                                     #menu: 导航 > 章节制作 > 删除当前章节
 ALT+w            script-message-to chapter_make_read write_chapter chp                                                  #menu: 导航 > 章节制作 > 创建chp章节文件
 ALT+g            script-message-to chapter_make_read write_chapter ogm                                                  #menu: 导航 > 章节制作 > 创建ogm章节文件
-<                playlist-prev                                                                                          #menu: 导航 > 上个文件
->                playlist-next                                                                                          #menu: 导航 > 下个文件
-#PGDWN            add chapter -1                                                                                         #menu: 导航 > 上一章节
-#PGUP             add chapter  1                                                                                         #menu: 导航 > 下一章节
 ,                   frame-back-step;show-text 当前帧：${estimated-frame-number}                                           #menu: 导航 > 前进后退 > 上一帧
 .                   frame-step     ;show-text 当前帧：${estimated-frame-number}                                             #menu: 导航 > 前进后退 > 下一帧
 RIGHT            seek  5                                                                                                #menu: 导航 > 前进后退 > 前进 5 秒
@@ -126,12 +126,13 @@ CTRL+g           cycle gamut-mapping-mode ;show-text 色域映射模式:${gamut-
 ##⇘⇘uosc一级菜单：#menu: 视频
 #                cycle video                                                                                            #menu: 视频 > 切换  视频轨
 #                set hwdec "no"                                                                                         #menu: 视频 > 切换  解码方式 > 软解
-#                set hwdec "auto-safe"                                                                                  #menu: 视频 > 切换  解码方式 > 自动选择硬解加速模式
+#                set hwdec "auto-safe"                                                                                  #menu: 视频 > 切换  解码方式 > 自动选择非copy硬解模式
 #                set hwdec "auto-copy-safe"                                                                             #menu: 视频 > 切换  解码方式 > 自动选择copy硬解模式
 #                set hwdec "nvdec"                                                                                      #menu: 视频 > 切换  解码方式 > nvdec硬解
 #                set hwdec "d3d11va"                                                                                    #menu: 视频 > 切换  解码方式 > d3d11va硬解
 #                set hwdec "nvdec-copy"                                                                                 #menu: 视频 > 切换  解码方式 > nvdec-copy硬解
 #                set hwdec "d3d11va-copy"                                                                               #menu: 视频 > 切换  解码方式 > d3d11va-copy硬解
+#                set hwdec "d3d12va-copy"                                                                               #menu: 视频 > 切换  解码方式 > d3d12va-copy硬解
 #                set video-sync audio;show-text 帧同步模式:${video-sync}                                                #menu: 视频 > 切换  帧同步模式 > audio
 #                set video-sync display-resample;show-text 帧同步模式:${video-sync}                                     #menu: 视频 > 切换  帧同步模式 > display-resample
 #                set video-sync display-tempo;show-text 帧同步模式:${video-sync}                                        #menu: 视频 > 切换  帧同步模式 > display-tempo
@@ -163,20 +164,19 @@ CTRL+.           add audio-delay  0.1;show-text 音频延迟:${audio-delay}     
 #                  cycle audio-normalize-downmix;show-text 音频规格化:${audio-normalize-downmix}                          #menu: 音频 > 开/关 音频规格化
 CTRL+y           cycle audio-exclusive  ;show-text 音频独占模式:${audio-exclusive}                                      #menu: 音频 > 开/关 音频独占模式
 CTRL+Y           cycle hr-seek-framedrop;show-text 音频同步模式:${hr-seek-framedrop}                                    #menu: 音频 > 切换  音频同步模式
+F2               cycle-values  af "@dynaudnorm:lavfi=[dynaudnorm=g=5:f=250:r=0.9:p=0.5]" "@loudnorm:lavfi=[loudnorm=I=-16:TP=-3:LRA=4]" ""              #menu: 音频 >  切换  下混滤镜
+ALT+`            af clr ""                                                                                              #menu: 音频 > 清空 音频滤镜
 #                set   audio-channels "7.1";show-text 音频通道输出方式:${audio-channels}                                #menu: 音频 > 音频通道输出方式 > 7.1声道输出
 #                set   audio-channels "5.1";show-text 音频通道输出方式:${audio-channels}                                #menu: 音频 > 音频通道输出方式 > 5.1声道输出
 #                set   audio-channels "stereo";show-text 音频通道输出方式:${audio-channels}                             #menu: 音频 > 音频通道输出方式 > 双通道输出
 #                set   audio-channels "7.1,5.1,stereo";show-text 音频通道输出方式:${audio-channels}                     #menu: 音频 > 音频通道输出方式 > 自动选择以上输出方式
 ALT+y            cycle-values audio-channels "7.1,5.1,stereo" "7.1" "5.1" "stereo" "auto-safe" "auto";show-text 音频通道输出方式:${audio-channels}      #menu: 音频 > 音频通道输出方式 > 循环切换
-F2               cycle-values  af "@dynaudnorm:lavfi=[dynaudnorm=g=5:f=250:r=0.9:p=0.5]" "@loudnorm:lavfi=[loudnorm=I=-16:TP=-3:LRA=4]" ""              #menu: 音频 >  切换  下混滤镜
-ALT+n            script-message-to drcbox key_toggle_bindings                                                           #menu: 音频 > 开/关 混音菜单
-ALT+`            af clr ""                                                                                              #menu: 音频 > 清空 音频滤镜
 
 ##⇘⇘uosc一级菜单：#menu: 字幕
 j                cycle sub;show-text 字幕切换为:${sub}                                                                  #menu: 字幕 > 切换  下一个字幕
 k                cycle secondary-sid;show-text 切换次字幕:${secondary-sid}                                              #menu: 字幕 > 切换  次字幕
 v                cycle sub-visibility;show-text 字幕可见性:${sub-visibility}                                            #menu: 字幕 > 切换  可见性
-u                cycle sub-ass-override;show-text 字幕渲染样式:${sub-ass-override}                                      #menu: 字幕 > 切换  渲染样式
+u                cycle sub-ass-override;show-text 字幕渲染样式:${sub-ass-override}                                      #menu: 字幕 > 切换  ass字幕渲染样式
 J                cycle sub-ass-vsfilter-color-compat  ;show-text 字幕颜色转换方式:${sub-ass-vsfilter-color-compat}       #menu: 字幕 > 兼容性 > 切换  字幕颜色转换方式
 B                cycle sub-ass-vsfilter-blur-compat   ;show-text blur标签缩放兼容性:${sub-ass-vsfilter-blur-compat}      #menu: 字幕 > 兼容性 > 切换  blur标签缩放兼容性
 V                cycle sub-ass-vsfilter-aspect-compat ;show-text vsfilter系兼容性:${sub-ass-vsfilter-aspect-compat}     #menu: 字幕 > 兼容性 > 切换  vsfilter系兼容性
@@ -207,11 +207,6 @@ ALT+v            vf toggle deblock=filter=weak:block=4                          
 #                vf toggle fps=fps=60/1.001                                                                             #menu: 视频滤镜 > 开/关 强制帧数59.94
 #                vf toggle pad=aspect=16/9:x=-1:y=-1                                                                    #menu: 视频滤镜 > 开/关 填充16:9的黑边并居中
 #                vf toggle colortemperature=temperature=6500                                                            #menu: 视频滤镜 > 开/关 色温修正6500
- CTRL+`          vf clr ""                                                                                              #menu: 视频滤镜 > VS 滤镜 > 清空
- !               vf set vapoursynth="~~/vs/MEMC_MVT_LQ.vpy"                                                             #menu: 视频滤镜 > VS 滤镜 > 开启 补帧-MVTools_快速
- @               vf set vapoursynth="~~/vs/MEMC_MVT_STD.vpy"                                                            #menu: 视频滤镜 > VS 滤镜 > 开启 补帧-MVTools_标准
- SHARP           vf set vapoursynth="~~/vs/MEMC_RIFE_STD.vpy"                                                           #menu: 视频滤镜 > VS 滤镜 > 开启 补帧-RIFE_标准
-
 
 ##⇘⇘uosc一级菜单：#menu: 着色器
 CTRL+0           change-list glsl-shaders clr ""                                                                                   #menu: 着色器 > 清空
@@ -257,11 +252,9 @@ CTRL+J           script-message cycle-commands "change-list glsl-shaders pre '~~
 #                script-message cycle-commands "change-list glsl-shaders pre '~~/shaders/other/nlmeans_hq.glsl'" "change-list glsl-shaders remove '~~/shaders/other/nlmeans_hq.glsl'"          #menu: 着色器 > Other > 开/关 nlmeans-hq降噪
 
 ##⇘⇘uosc一级菜单：#menu: 工具
-#                script-message  toggle_auto_pause                                                                          #menu: 工具 > 切换 最小化暂停
 CTRL+b           cycle border;show-text 显示边框:${border}                                                              #menu: 工具 > 切换  边框模式
 CTRL+T           cycle-values title ${media-title} ${filename}                                                          #menu: 工具 > 切换  显示标题
 `                    script-binding console/enable                                                                          #menu: 工具 > 打开 控制台
-ALT+1            apply-profile HDR_DolbyVision;show-text 配置组：杜比视界                                                #menu: 工具 > 常规配置组 > 切换  杜比视界配置
 ALT+2            apply-profile Normal;show-text 配置组：Normal                                                          #menu: 工具 > 常规配置组 > 切换  Normal配置
 ALT+3            apply-profile Normal+;show-text 配置组：Normal+                                                        #menu: 工具 > 常规配置组 > 切换  Normal+配置
 ALT+4            apply-profile Anime;show-text 配置组：Anime                                                            #menu: 工具 > 常规配置组 > 切换  Anime配置
@@ -279,7 +272,6 @@ CTRL+F10         script-message match-refresh                                   
 ALT+F10          script-message revert-refresh                                                                          #menu: 工具 > 切换  刷新率 > 显示器默认刷新
 #                   script-message toggle-fps-type                                                                         #menu: 工具 > 切换  刷新率 > 在视频fps和指定fps之间切换
 #                 cycle-values   reset-on-next-file "all" "no" "vf,af,loop-file,deinterlace,border,contrast,brightness,gamma,saturation,hue,video-zoom,video-rotate,video-pan-x,video-pan-y,panscan,speed,audio,sub,audio-delay,sub-pos,sub-scale,sub-delay,sub-speed,sub-visibility";show-text 播放下一个文件时重置以下选项:${reset-on-next-file}   #menu: 工具 > 重置播放中更改项
-
 
 ##⇘⇘uosc一级菜单
 b                cycle window-minimized                                                                             #menu: 最小化
