更新弹幕插件

--- a/portable_config/input.conf
+++ b/portable_config/input.conf
@@ -277,3 +277,4 @@ b                cycle window-minimized                                         
 q                quit                                                                                                       #menu: 退出程序
 Q                quit-watch-later                                                                                       # 退出并保存当前状态
 
+Ctrl+d           script-message show_danmaku_keyboard
