--- a/portable_config/script-opts/uosc.conf
+++ b/portable_config/script-opts/uosc.conf
@@ -78,7 +78,8 @@ progress_line_width=10
 ##   fullscreen = cycle:crop_free:fullscreen:no/yes=fullscreen_exit!?Fullscreen
 ##   loop-playlist = cycle:repeat:loop-playlist:no/inf!?Loop playlist
 ##   toggle:{icon}:{prop} = cycle:{icon}:{prop}:no/yes!
-controls=menu,open-file,<idle>command:history:script-binding recentmenu/open?最近播放,<idle>command:bookmarks:script-binding simplebookmark/open-list?书签菜单,<!idle>command:analytics:script-binding stats_plus/display-stats-toggle?统计,<stream,!has_playlist>stream-quality?流媒体品质,<audio,image>command:image:script-binding uosc/video#video?封面,<has_many_edition>editions,<video>video,<has_audio,!audio>audio,<has_sub>subtitles,<has_chapter>chapters,<has_playlist>space,space,<!idle,!image>command:fast_rewind :seek -5 exact?后退 5s,<!idle,!image>speed,<!idle,!image>command:fast_forward:seek  5 exact?前进 5s,space,loop-file,shuffle,loop-playlist,gap,<has_playlist>prev,<has_playlist>playlist,<has_playlist>next,gap,audio-device,gap,fullscreen
+
+controls=menu,open-file,<idle>command:history:script-binding recentmenu/open?最近播放,<idle>command:bookmarks:script-binding simplebookmark/open-list?书签菜单,<!idle>command:analytics:script-binding stats_plus/display-stats-toggle?统计,<stream,!has_playlist>stream-quality?流媒体品质,<audio,image>command:image:script-binding uosc/video#video?封面,<has_many_edition>editions,<has_audio,!audio>audio,<has_sub>subtitles,<has_chapter>chapters,<has_playlist>space,space,<!idle,!image>command:fast_rewind :seek -5 exact?后退 5s,<!idle,!image>speed,<!idle,!image>command:fast_forward:seek  5 exact?前进 5s,space,<video>button:danmaku,<video>cycle:toggle_on:show_danmaku@uosc_danmaku:on=toggle_on/off=toggle_off?弹幕开关,gap:0.6,<has_playlist>prev,<has_playlist>playlist,<has_playlist>next,gap,audio-device,gap,fullscreen
 controls_size=32
 controls_margin=8
 controls_spacing=2
